# mongo-rust-driver

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: count.rs  decode.rs  delete.rs  encode.rs  find.rs  insert.rs  ping.rs  replace.rs  test.rs  tmpr1ga0f  update.rs
mongoc/: Cargo.toml  build.rs
mongoc/examples/: test.rs
mongoc/src/: lib.rs  lib2.rs
src/: auth.rs  bson_util.rs  client.rs  client_session.rs  collection.rs  command_type.rs  common.rs  concern.rs  connstring.rs  cursor.rs  db.rs  error.rs  find_and_modify.rs  is_master.rs  lib.rs  object_id.rs  options.rs  pool.rs  read_concern.rs  read_preference.rs  results.rs  selection_criteria.rs  session.rs  stream.rs  uri.rs
src/apm/: client.rs  event.rs  listener.rs
src/bson/: bson.rs  decimal128.rs  decode.rs  doc.rs  encode.rs  macros.rs  mod.rs  oid.rs  spec.rs  u2f.rs
src/bson/decoder/: mod.rs  serde.rs
src/bson/encoder/: mod.rs  serde.rs
src/bson/serde/: decode.rs  encode.rs
src/client/: executor.rs  mod.rs
src/client/auth/: mod.rs  scram.rs
src/client/options/: mod.rs  test.rs
src/cmap/conn/: command.rs
src/cmap/conn/wire/: message.rs  test.rs
src/cmap/establish/: handshake.rs
src/cmap/test/: integration.rs
src/coll/: mod.rs  options.rs
src/collection/: charge_stream.rs  error.rs  mod.rs  options.rs  results.rs
src/command/: mod.rs
src/core/: bsonc.rs  change_stream.rs  client.rs  client_pool.rs  client_session.rs  collection.rs  cursor.rs  database.rs  error.rs  find_and_modify.rs  mod.rs  read_preference.rs  session.rs  uri.rs  write_concern.rs
src/cursor/: mod.rs
src/database/: mod.rs  options.rs
src/db/: mod.rs  options.rs  roles.rs
src/db2/: mod.rs  options.rs
src/event/: cmap.rs  command.rs
src/gridfs/: file.rs  mod.rs
src/message/: mod.rs
src/operation/: mod.rs
src/operation/aggregate/: mod.rs  test.rs
src/operation/count/: mod.rs  test.rs
src/operation/create/: mod.rs  test.rs
src/operation/delete/: mod.rs  test.rs
src/operation/distinct/: mod.rs  test.rs
src/operation/drop_collection/: mod.rs  test.rs
src/operation/drop_database/: mod.rs  test.rs
src/operation/find/: mod.rs  test.rs
src/operation/find_and_modify/: mod.rs  options.rs  test.rs
src/operation/get_more/: mod.rs  test.rs
src/operation/insert/: mod.rs  test.rs
src/operation/list_collections/: mod.rs  test.rs
src/operation/list_databases/: mod.rs  test.rs
src/operation/run_command/: mod.rs  test.rs
src/operation/update/: mod.rs  test.rs
src/sdam/: monitor.rs  public.rs
src/sdam/description/: server.rs
src/sdam/description/topology/: mod.rs
src/sdam/description/topology/server_selection/: test.rs
src/sys/: bsonc.rs  mod.rs  mongoc.rs
src/test/: atlas_connectivity.rs  client.rs  coll.rs  db.rs
src/test/spec/: auth.rs  connection_stepdown.rs  mod.rs
src/test/spec/command_monitoring/: event.rs  mod.rs  operation.rs
src/test/spec/crud/: aggregate.rs  count.rs  delete_many.rs  delete_one.rs  distinct.rs  find.rs  find_one_and_delete.rs  find_one_and_replace.rs  find_one_and_update.rs  insert_many.rs  insert_one.rs  mod.rs  replace_one.rs  update_many.rs  update_one.rs
src/test/spec/read_write_concern/: connection_string.rs  document.rs  mod.rs
src/test/util/: event.rs  matchable.rs  mod.rs
src/topology/: mod.rs  monitor.rs  server.rs
src/util/: bufstream.rs  md5.rs  separator.rs  textnonce.rs
src/wire_protocol/: flags.rs  header.rs  operations.rs
src2/: client.rs  pool.rs  stream.rs  write_concern.rs
src2/apm/: client.rs
src2/bson/: macros.rs  mod.rs  spec.rs  u2f.rs
src2/bson/serde/: decode.rs
src2/collection/: mod.rs  options.rs
src2/command/: mod.rs
src2/database/: mod.rs  options.rs
src2/gridfs/: file.rs
src2/message/: mod.rs
src2/topology/: mod.rs  server.rs
src2/util/: md5.rs  mod.rs  textnonce.rs
tests/: lib.rs
tests/bson/: bson.rs  doc.rs  encoder_decoder.rs  macros.rs  mod.rs  oid.rs  ser.rs  serde.rs
(+1 files in other folders)
