[package]
name            = "mongors"
version         = "0.3.0"
license         = "MIT"
authors         = ["mitum <dangcheng@hotmail.com>"]
description     = "Rust driver for MongoDB"
keywords        = ["mongo", "mongodb", "mongodb_driver", "database", "nosql"]
documentation   = "https://docs.rs/mongors"
homepage        = "https://github.com/mitum/mongo-rust-driver"
repository      = "https://github.com/mitum/mongo-rust-driver"
readme          = "README.md"
edition         = "2018"
exclude         = ["mongo-c-driver-*"]

[dependencies]
#linked-hash-map = "0.5"
#chrono = "0.4"
#serde = "1.0"
#serde_json = "1.0"
#byteorder = "1.2"
#libc = "0.2"
#rand = "0.5"
#data-encoding = "2.1"
#bitflags = "1.0"
#semver = "0.9"
#ring = "0.13"
bsonrs = "0.1"
