[package]
name            = "mongors"
version         = "0.3.0"
license         = "MIT"
authors         = ["danc <dangcheng@hotmail.com>"]
description     = "Rust driver for MongoDB"
keywords        = ["mongo", "mongodb", "mongodb_driver", "database", "nosql"]
documentation   = "https://docs.rs/mongors"
homepage        = "https://github.com/danc/mongo-rust-driver"
repository      = "https://github.com/danc/mongo-rust-driver"
readme          = "README.md"
edition         = "2018"

[dependencies]
base64 = "0.11.0"
bitflags = "1.1.0"
bufstream = "0.1.4"
byteorder = "1.3.2"
chrono = "0.4"
derivative = "1.0.2"
err-derive = "0.2.3"
hex = "0.4.0"
hmac = "0.7.1"
lazy_static = "1.4.0"
os_info = "1.1.2"
pbkdf2 = "0.3.0"
percent-encoding = "2.0.0"
rand = "0.7"
serde_with = "1.3.1"
sha-1 = "0.8.1"
sha2 = "0.8.0"
stringprep = "0.1.2"
time = "0.1"
trust-dns-proto = "0.19.0"
trust-dns-resolver = "0.19.0"
typed-builder = "0.3.0"
version_check = "0.9.1"
webpki = "0.21.0"
webpki-roots = "0.18.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "1.3"
md5 = "0.6"
decimal = { version = "2.0.4", default_features = false, optional = true }

[dependencies.rustls]
version = "0.16.0"
features = ["dangerous_configuration"]

[dev-dependencies]
approx = "0.3.2"
assert_matches = "1.3"
derive_more = "0.15.0"
function_name = "0.2.0"
pretty_assertions = "0.6.1"
serde_json = "1.0.40"
semver = "0.9.0"
serde_derive = "1.0"
serde_bytes = "0.11"

[package.metadata.docs.rs]
features = ["decimal128"]
