[package]
name            = "mongors"
version         = "0.3.0"
license         = "MIT"
authors         = ["danc <dangcheng@hotmail.com>"]
description     = "Rust driver for MongoDB"
keywords        = ["mongo", "mongodb", "mongodb_driver", "database", "nosql"]
documentation   = "https://docs.rs/mongors"
homepage        = "https://github.com/danc/mongo-rust-driver"
repository      = "https://github.com/danc/mongo-rust-driver"
readme          = "README.md"
edition         = "2018"

[dependencies]
base64 = "0.12"
bitflags = "1.2"
bufstream = "0.1"
byteorder = "1.3"
chrono = "0.4"
derivative = "2.1"
err-derive = "0.2"
hmac = "0.7"
lazy_static = "1.4"
os_info = "2.0"
pbkdf2 = "0.3"
percent-encoding = "2.1"
rand = "0.7"
serde_with = "1.4"
sha-1 = "0.8"
sha2 = "0.8"
stringprep = "0.1"
time = "0.1"
trust-dns-proto = "0.19"
trust-dns-resolver = "0.19"
typed-builder = "0.6"
version_check = "0.9"
webpki = "0.21"
webpki-roots = "0.19"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "1.3"
decimal = { version = "2.0", default_features = false, optional = true }
hostname = "0.3"

[dependencies.rustls]
version = "0.17"
features = ["dangerous_configuration"]

[dev-dependencies]
approx = "0.3"
assert_matches = "1.3"
derive_more = "0.99"
function_name = "0.2"
pretty_assertions = "0.6"
serde_json = "1.0"
semver = "0.9"
serde_derive = "1.0"
serde_bytes = "0.11"

[package.metadata.docs.rs]
features = ["decimal128"]
